app/assets/stylesheets/components/_card.scss
.cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-gap: 16px;
  margin: 20px;
}

.card-category {
  // background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('whiskey.jpg');
  // background-size: cover;
  // background-position: center;
  // opacity: 0.5;
  display: block;
  position: relative;
  overflow: hidden;
  height: 300px;
  // padding-left: 8px;
  text-align: center;
  color: white;
  font-size: 24px;
  font-weight: light;
  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
  border-radius: 5px;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  a {
    color: white;
  }
}

.card-image {
  width: 100%;
  height: 100%;
  // background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('whiskey.jpg');
  background-size: cover;
  background-position: center;
  padding: 120px 0;
  transition: all 1s;
  // text-indent: -9999px;
}

.index-ingredients {
  list-style-type: none;
  position: absolute;
  bottom: 0;
  left: 100%;
  right: 0;
  top: 100px;
  // background-color: rgba(240,240,240,0.2);
  overflow: hidden;
  width: 0;
  height: 100%;
  transition: all 1s ease;
  li {
    font-size: 16px;
  }
}

.card-category:hover .index-ingredients {
  width: 100%;
  left: 0;
  top: 100px;
}



.card-image:hover {
  transform: scale(1.1);
  a {
    color: rgb(220,220,220);
  }
}

// .card-category:hover {
//   transform: scale(1.2);
// }


// .card-category:hover ul {
//   opacity: 1;
// }

// Smallest device
@media (min-width: 100px) and (max-width: 575px) {
  .cards {
    grid-template-columns: 1fr;
  }
}

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) {
  .cards {
    grid-template-columns: 1fr;
  }
}

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) {
  .cards {
    grid-template-columns: 1fr 1fr;
  }
}

// Large devices (desktops, 992px and up)
@media (min-width: 992px) {
  .cards {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {
  .cards {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}

